--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,20 @@
 
 services:
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+
   # User Service
   user-service:
     build:
       context: ./user-service
     ports:
-      - "5000:5000"
+      - "5001:5001"
     environment:
+      - DAPR_HTTP_PORT=3500
+      - DAPR_GRPC_PORT=50001
       - FLASK_APP=app
       - FLASK_ENV=development
       - SQLALCHEMY_DATABASE_URI=sqlite:///users.db
@@ -21,7 +29,7 @@ services:
     networks:
       - app-network
     command: ["dapr", "run", "--app-id", "user-service", "--app-port", "5000", "--dapr-http-port", "3500", "--components-path", "/components", "python", "app/__init__.py"]
-
+    
   # News Aggregation Service
   news-aggregation-service:
     build:
@@ -29,6 +37,8 @@ services:
     ports:
       - "5001:5001"
     environment:
+      - DAPR_HTTP_PORT=3501
+      - DAPR_GRPC_PORT=50002
       - NEWS_API_KEY=${NEWS_API_KEY}
     volumes:
       - ./news-aggregation-service:/app
@@ -45,6 +55,8 @@ services:
     ports:
       - "5002:5002"
     environment:
+      - DAPR_HTTP_PORT=3502
+      - DAPR_GRPC_PORT=50003
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_PORT=${EMAIL_PORT}
       - EMAIL_USERNAME=${EMAIL_USERNAME}
@@ -64,6 +76,8 @@ services:
     ports:
       - "5003:5003"
     environment:
+      - DAPR_HTTP_PORT=3503
+      - DAPR_GRPC_PORT=50004
       - GEMINI_API_KEY=${GEMINI_API_KEY}
     volumes:
       - ./ai-service:/app
@@ -79,6 +93,9 @@ services:
       context: ./api-gateway
     ports:
       - "5004:5004"
+    environment:
+      - DAPR_HTTP_PORT=3504
+      - DAPR_GRPC_PORT=50005
     volumes:
       - ./api-gateway:/app
     depends_on:
@@ -108,7 +125,8 @@ services:
     command: ["./placement", "-port", "6050"]
     networks:
       - app-network
-
+      
 networks:
   app-network:
     driver: bridge
+
