--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,37 +23,38 @@ services:
       - EMAIL_USERNAME=${EMAIL_USERNAME}
       - EMAIL_PASSWORD=${EMAIL_PASSWORD}
     volumes:
-      - ./user-service:/app
+      - ./user-service/dapr-components:/dapr/components
     depends_on:
-      - dapr-placement
+      - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "user-service", "--app-port", "5000", "--dapr-http-port", "3500", "--components-path", "/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "user-service", "--app-port", "5001", "--dapr-http-port", "3500", "--components-path", "/dapr/components", "python", "app/__init__.py"]
     
   # News Aggregation Service
   news-aggregation-service:
     build:
       context: ./news-aggregation-service
     ports:
-      - "5001:5001"
+      - "5002:5002"
     environment:
       - DAPR_HTTP_PORT=3501
       - DAPR_GRPC_PORT=50002
       - NEWS_API_KEY=${NEWS_API_KEY}
     volumes:
-      - ./news-aggregation-service:/app
+      - ./news-aggregation-service/dapr-components:/dapr/components
     depends_on:
-      - dapr-placement
+      - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "news-aggregation-service", "--app-port", "5001", "--dapr-http-port", "3501", "--components-path", "/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "news-aggregation-service", "--app-port", "5002", "--dapr-http-port", "3501", "--components-path", "/dapr/components", "python", "app/__init__.py"]
+
 
   # Email Service
   email-service:
     build:
       context: ./email-service
     ports:
-      - "5002:5002"
+      - "5003:5003"
     environment:
       - DAPR_HTTP_PORT=3502
       - DAPR_GRPC_PORT=50003
@@ -62,19 +63,19 @@ services:
       - EMAIL_USERNAME=${EMAIL_USERNAME}
       - EMAIL_PASSWORD=${EMAIL_PASSWORD}
     volumes:
-      - ./email-service:/app
+      - ./email-service/dapr-components:/dapr/components
     depends_on:
-      - dapr-placement
+      - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "email-service", "--app-port", "5002", "--dapr-http-port", "3502", "--components-path", "/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "email-service", "--app-port", "5003", "--dapr-http-port", "3502", "--components-path", "/dapr/components", "python", "app/__init__.py"]
 
   # AI Service
   ai-service:
     build:
       context: ./ai-service
     ports:
-      - "5003:5003"
+      - "5004:5004"
     environment:
       - DAPR_HTTP_PORT=3503
       - DAPR_GRPC_PORT=50004
@@ -82,22 +83,22 @@ services:
     volumes:
       - ./ai-service:/app
     depends_on:
-      - dapr-placement
+      - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "ai-service", "--app-port", "5003", "--dapr-http-port", "3503", "--components-path", "/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "ai-service", "--app-port", "5004", "--dapr-http-port", "3503", "--components-path", "/dapr/components", "python", "app/__init__.py"]
 
   # API Gateway
   api-gateway:
     build:
       context: ./api-gateway
     ports:
-      - "5004:5004"
+      - "5000:5000"
     environment:
       - DAPR_HTTP_PORT=3504
       - DAPR_GRPC_PORT=50005
     volumes:
-      - ./api-gateway:/app
+      - ./api-gateway/dapr-components:/dapr/components
     depends_on:
       - dapr-placement
       - user-service
@@ -106,27 +107,27 @@ services:
       - ai-service
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "api-gateway", "--app-port", "5004", "--dapr-http-port", "3504", "--components-path", "/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "api-gateway", "--app-port", "5000", "--dapr-http-port", "3504", "--components-path", "/dapr/components", "python", "app/__init__.py"]
 
-  # UI
-  ui:
-    build:
-      context: ./ui
-    ports:
-      - "3000:3000"
-    networks:
-      - app-network
+  # # UI
+  # ui:
+  #   build:
+  #     context: ./ui
+  #   ports:
+  #     - "3000:3000"
+  #   networks:
+  #     - app-network
 
-  # Dapr placement service
-  dapr-placement:
-    image: "daprio/dapr:latest"
-    ports:
-      - "6050:6050"
-    command: ["./placement", "-port", "6050"]
-    networks:
-      - app-network
+#   # Dapr placement service
+#   dapr-placement:
+#     image: "daprio/dapr:latest"
+#     ports:
+#       - "6050:6050"
+#     command: ["./placement", "-port", "6050"]
+#     networks:
+#       - app-network
       
-networks:
-  app-network:
-    driver: bridge
+# networks:
+#   app-network:
+#     driver: bridge
 
