--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
+version: '3.8'
 
 services:
-
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+    networks:
+      - app-network
 
   # User Service
   user-service:
@@ -28,8 +30,8 @@ services:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "user-service", "--app-port", "5001", "--dapr-http-port", "3500", "--components-path", "/dapr/components", "python", "app/__init__.py"]
-    
+    command: ["dapr", "run", "--app-id", "user-service", "--app-port", "5001", "--dapr-http-port", "3500", "--components-path", "/dapr/components", "--", "python", "app/__init__.py"]
+
   # News Aggregation Service
   news-aggregation-service:
     build:
@@ -46,8 +48,7 @@ services:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "news-aggregation-service", "--app-port", "5002", "--dapr-http-port", "3501", "--components-path", "/dapr/components", "python", "app/__init__.py"]
-
+    command: ["dapr", "run", "--app-id", "news-aggregation-service", "--app-port", "5002", "--dapr-http-port", "3501", "--components-path", "/dapr/components", "--", "python", "app/__init__.py"]
 
   # Email Service
   email-service:
@@ -68,7 +69,7 @@ services:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "email-service", "--app-port", "5003", "--dapr-http-port", "3502", "--components-path", "/dapr/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "email-service", "--app-port", "5003", "--dapr-http-port", "3502", "--components-path", "/dapr/components", "--", "python", "app/__init__.py"]
 
   # AI Service
   ai-service:
@@ -82,11 +83,12 @@ services:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
     volumes:
       - ./ai-service:/app
+      - ./ai-service/dapr-components:/dapr/components
     depends_on:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "ai-service", "--app-port", "5004", "--dapr-http-port", "3503", "--components-path", "/dapr/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "ai-service", "--app-port", "5004", "--dapr-http-port", "3503", "--components-path", "/dapr/components", "--", "python", "app/__init__.py"]
 
   # API Gateway
   api-gateway:
@@ -107,27 +109,29 @@ services:
       - ai-service
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "api-gateway", "--app-port", "5000", "--dapr-http-port", "3504", "--components-path", "/dapr/components", "python", "app/__init__.py"]
+    command: ["dapr", "run", "--app-id", "api-gateway", "--app-port", "5000", "--dapr-http-port", "3504", "--components-path", "/dapr/components", "--", "python", "app/__init__.py"]
 
-  # # UI
-  # ui:
-  #   build:
-  #     context: ./ui
-  #   ports:
-  #     - "3000:3000"
-  #   networks:
-  #     - app-network
+  # UI
+  ui:
+    build:
+      context: ./ui
+    ports:
+      - "3000:3000"
+    depends_on:
+      - api-gateway
+    networks:
+      - app-network
+    command: ["dapr", "run", "--app-id", "ui", "--app-port", "3000", "--dapr-http-port", "3505", "--", "npm", "start"]
 
-#   # Dapr placement service
-#   dapr-placement:
-#     image: "daprio/dapr:latest"
-#     ports:
-#       - "6050:6050"
-#     command: ["./placement", "-port", "6050"]
-#     networks:
-#       - app-network
-      
-# networks:
-#   app-network:
-#     driver: bridge
+  # Dapr placement service
+  dapr-placement:
+    image: "daprio/dapr:latest"
+    ports:
+      - "6050:6050"
+    command: ["./placement", "-port", "6050"]
+    networks:
+      - app-network
 
+networks:
+  app-network:
+    driver: bridge
