--- a/email-service/Dockerfile
+++ b/email-service/Dockerfile
@@ -10,5 +10,6 @@ COPY . .
 # Install Dapr CLI
 RUN apt-get update && apt-get install -y wget
 RUN wget -q https://raw.githubusercontent.com/dapr/cli/master/install/install.sh -O install.sh && chmod +x install.sh && ./install.sh
+ENV PATH="/root/.dapr/bin:$PATH"
 
 CMD ["dapr", "run", "--app-id", "email-service", "--app-port", "5003", "--resources-path", "/dapr/components", "--", "python", "app/__init__.py"]
