--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.0.3
-requests==2.26.0
-python-dotenv==0.19.2
-Flask-CORS==3.0.10
-transformers==4.11.3
-torch==1.10.0
-semantic-kernel==0.1.0
+Flask
+requests
+python-dotenv
+Flask-CORS
+transformers
+torch
+semantic-kernel
