--- a/api-gateway/requirements.txt
+++ b/api-gateway/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.0.3
-requests==2.26.0
-Flask-CORS==3.0.10
-fastapi==0.68.1
-uvicorn==0.15.0
-flask-jwt-extended==4.3.1
-python-dotenv==0.19.2
+Flask
+requests
+Flask-CORS
+fastapi
+uvicorn
+flask-jwt-extended
+python-dotenv
