--- a/user-service/requirements.txt
+++ b/user-service/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Flask-CORS==3.0.10
-python-dotenv==0.15.0
-PyJWT==2.3.0
+Flask
+Flask-SQLAlchemy
+Flask-CORS
+python-dotenv
+PyJWT
