--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -1,7 +1,7 @@
-Flask
-requests
-python-dotenv
-Flask-CORS
-transformers
-torch
-semantic-kernel
+Flask==2.2.3
+requests==2.28.2
+python-dotenv==0.21.1
+Flask-CORS==3.0.10
+transformers==4.27.1
+torch==1.13.1
+semantic-kernel==0.2.7
