Using a factory pattern in __init__.py for better app configuration. Improving error handling and logging throughout the application. Using a Blueprint in views.py for better route organization. Adding mock tests for better unit testing without depending on external services. Optimizing the Dockerfile for smaller image size and better caching. Updating the entrypoint script to use exec for proper signal handling. Specifying versions in the requirements.txt file for better reproducibility. Removed unused dependencies (fastapi and uvicorn).

--- a/api-gateway/requirements.txt
+++ b/api-gateway/requirements.txt
@@ -1,7 +1,5 @@
-Flask
-requests
-Flask-CORS
-fastapi
-uvicorn
-flask-jwt-extended
-python-dotenv
+Flask==2.2.3
+requests==2.28.2
+Flask-CORS==3.0.10
+flask-jwt-extended==4.4.4
+python-dotenv==0.21.1
