--- a/news-aggregation-service/requirements.txt
+++ b/news-aggregation-service/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-requests
-Flask-CORS
-python-dotenv
-redis
+Flask==2.2.3
+requests==2.28.2
+Flask-CORS==3.0.10
+python-dotenv==0.21.1
+redis==4.5.1
