Using a factory pattern in __init__.py for better app configuration. Improving the database schema with a proper relationship between User and Preferences. Enhancing error handling and input validation. Using a Blueprint in views.py for better route organization. Improving the test cases to cover more scenarios. Optimizing the Dockerfile for smaller image size and better caching. Updating the entrypoint script to use exec for proper signal handling. Specifying versions in the requirements.txt file for better reproducibility.

--- a/user-service/requirements.txt
+++ b/user-service/requirements.txt
@@ -1,6 +1,7 @@
-Flask
-Flask-SQLAlchemy
-Flask-CORS
-python-dotenv
-PyJWT
-Flask-JWT-Extended
+Flask==2.2.3
+Flask-SQLAlchemy==3.0.3
+Flask-CORS==3.0.10
+python-dotenv==0.21.1
+PyJWT==2.6.0
+Flask-JWT-Extended==4.4.4
+requests==2.28.2
