--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,16 +1,29 @@
-FROM node:14-alpine
+# Use Node.js as the base image for building
+FROM node:14-alpine as build
 
+# Set working directory
 WORKDIR /app
 
-COPY package*.json ./
+# Copy package.json and package-lock.json
+COPY package.json package-lock.json ./
 
-RUN npm ci --only=production
+# Install dependencies
+RUN npm ci --production
 
+# Copy all files
 COPY . .
 
+# Build the React app
 RUN npm run build
 
+# Use nginx for serving the built app
 FROM nginx:alpine
-COPY --from=0 /app/build /usr/share/nginx/html
+
+# Copy the built app from the previous stage
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose port 80
 EXPOSE 80
+
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
