--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ __pycache__/
 # OS generated files
 .DS_Store
 Thumbs.db
+
+# Python virtual environment
+.python-version
+
+# Coverage reports
+htmlcov/
+.coverage
+
+# Pytest cache
+.pytest_cache/
