--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # Redis cache
@@ -16,6 +16,8 @@ services:
     ports:
       - "5001:5001"
     environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       - DAPR_HTTP_PORT=3500
       - DAPR_GRPC_PORT=50001
       - FLASK_APP=app
@@ -25,13 +27,31 @@ services:
       - EMAIL_PORT=${EMAIL_PORT}
       - EMAIL_USERNAME=${EMAIL_USERNAME}
       - EMAIL_PASSWORD=${EMAIL_PASSWORD}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     volumes:
       - ./user-service/dapr-components:/dapr/components
     depends_on:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "user-service", "--app-port", "5001", "--resources-path", "/dapr/components", "--", "python", "app/__init__.py"]
+    command:
+      [
+        "dapr",
+        "run",
+        "--app-id",
+        "user-service",
+        "--app-port",
+        "5001",
+        "--resources-path",
+        "/dapr/components",
+        "--",
+        "python",
+        "app/__init__.py",
+      ]
 
   # News aggregation service
   news-aggregation-service:
@@ -49,7 +69,20 @@ services:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "news-aggregation-service", "--app-port", "5002", "--resources-path", "/dapr/components", "--", "python", "app/__init__.py"]
+    command:
+      [
+        "dapr",
+        "run",
+        "--app-id",
+        "news-aggregation-service",
+        "--app-port",
+        "5002",
+        "--resources-path",
+        "/dapr/components",
+        "--",
+        "python",
+        "app/__init__.py",
+      ]
 
   # Email service
   email-service:
@@ -70,7 +103,20 @@ services:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "email-service", "--app-port", "5003", "--resources-path", "/dapr/components", "--", "python", "app/__init__.py"]
+    command:
+      [
+        "dapr",
+        "run",
+        "--app-id",
+        "email-service",
+        "--app-port",
+        "5003",
+        "--resources-path",
+        "/dapr/components",
+        "--",
+        "python",
+        "app/__init__.py",
+      ]
 
   # AI service for text summarization
   ai-service:
@@ -89,7 +135,20 @@ services:
       - redis
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "ai-service", "--app-port", "5004", "--resources-path", "/dapr/components", "--", "python", "app/__init__.py"]
+    command:
+      [
+        "dapr",
+        "run",
+        "--app-id",
+        "ai-service",
+        "--app-port",
+        "5004",
+        "--resources-path",
+        "/dapr/components",
+        "--",
+        "python",
+        "app/__init__.py",
+      ]
 
   # API Gateway
   api-gateway:
@@ -110,7 +169,20 @@ services:
       - ai-service
     networks:
       - app-network
-    command: ["dapr", "run", "--app-id", "api-gateway", "--app-port", "5000", "--resources-path", "/dapr/components", "--", "python", "app/__init__.py"]
+    command:
+      [
+        "dapr",
+        "run",
+        "--app-id",
+        "api-gateway",
+        "--app-port",
+        "5000",
+        "--resources-path",
+        "/dapr/components",
+        "--",
+        "python",
+        "app/__init__.py",
+      ]
 
   # User Interface
   ui:
